--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -49,12 +49,9 @@
     <!-- An Array of "[ConnectivityManager connectionType],
                       [# simultaneous connection types]"  -->
     <string-array translatable="false" name="radioAttributes">
-        <!-- DEFAULT -->
-        <item>"1,1"</item>
-        <!-- MOBILE -->
-        <item>"0,1"</item>
-        <!-- BLUETOOTH -->
-        <item>"7,1"</item>
+       <item>"1,1"</item>
+       <item>"0,1"</item>
+       <item>"7,1"</item>
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
@@ -278,4 +275,19 @@
             0 - Nothing
             1 - Go to home -->
     <integer name="config_backPanicBehavior">1</integer>
+
+    <!-- Does the notification LED support multiple colors?
+         Used to decide if the user can change the colors -->
+    <bool name="config_multiColorNotificationLed">true</bool>
+
+    <!-- Does the battery LED support multiple colors?
+         Used to decide if the user can change the colors -->
+    <bool name="config_multiColorBatteryLed">true</bool>
+
+    <!-- Vibrator pattern for a very short but reliable vibration for soft keyboard tap -->
+    <integer-array name="config_keyboardTapVibePattern">
+        <item>0</item>
+        <item>41</item>
+        <item>7</item>
+    </integer-array>
 </resources>
