--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -289,4 +289,9 @@
    <bool name="config_FastChargingLedSupported">true</bool>
 
    <bool name="config_fingerprintRemoveClientOnCancel">true</bool>
+
+   <!-- Control whether the always on display mode is available. This should only be enabled on
+        devices where the display has be tuned to be power efficient in DOZE and/or DOZE_SUSPEND
+        states. -->
+   <bool name="config_dozeAlwaysOnDisplayAvailable">true</bool>
 </resources>
