--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -279,8 +279,6 @@
         <item>"/system/framework/oat/arm64/services.vdex"</item>
         <item>"/system/framework/arm64/boot.oat"</item>
         <item>"/system/framework/arm64/boot.vdex"</item>
-        <item>"/system/framework/arm64/boot-core-libart.oat"</item>
-        <item>"/system/framework/arm64/boot-core-libart.vdex"</item>
    </string-array>
 
    <bool name="config_multiColorNotificationLed">true</bool>
@@ -293,5 +291,8 @@
    <!-- Control whether the always on display mode is available. This should only be enabled on
         devices where the display has be tuned to be power efficient in DOZE and/or DOZE_SUSPEND
         states. -->
-   <bool name="config_dozeAlwaysOnDisplayAvailable">true</bool>
+   <bool name="config_dozeAlwaysOnDisplayAvailable">false</bool>
+   
+   <!-- Boolean indicating whether we want button brightness support -->
+  <bool name="config_button_brightness_support">true</bool>
 </resources>
