--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -290,4 +290,8 @@
         <item>41</item>
         <item>7</item>
     </integer-array>
+
+    <!-- Indicate whether closing the lid causes the device to go to sleep and opening
+         it causes the device to wake up. -->
+    <bool name="config_lidControlsSleep">true</bool>
 </resources>
