--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -214,8 +214,6 @@
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveNotificationLed">true</bool>
 
-    <bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool>
-
     <!-- Boolean to enable stk functionality on Samsung phones -->
     <!--bool name="config_samsung_stk">true</bool-->
     
@@ -270,12 +268,19 @@
          that can be set by the user. -->
     <integer name="config_screenBrightnessDoze">30</integer>
 
-   <!-- Control whether the always on display mode is available. This should only be enabled on
-        devices where the display has be tuned to be power efficient in DOZE and/or DOZE_SUSPEND
-        states. -->
-   <bool name="config_dozeAlwaysOnDisplayAvailable">true</bool>
+    <!-- Indicate whether closing the lid causes the device to go to sleep and opening
+         it causes the device to wake up.
+         The default is false. -->
+    <bool name="config_lidControlsSleep">true</bool>
+
+    <!-- Indicate whether to allow the device to suspend when the screen is off
+         due to the proximity sensor.  This resource should only be set to true
+         if the sensor HAL correctly handles the proximity sensor as a wake-up source.
+         Otherwise, the device may fail to wake out of suspend reliably.
+         The default is false. -->
+    <bool name="config_suspendWhenScreenOffDueToProximity">true</bool>
 
     <!-- If true, the doze component is not started until after the screen has been
          turned off and the screen off animation has been performed. -->
-<bool name="config_dozeAfterScreenOff">true</bool> 
+    <bool name="config_dozeAfterScreenOff">true</bool> 
 </resources>
