--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -269,4 +269,9 @@ Add a comment to this line
         <item>SUPL_HOST=supl.google.com</item>
         <item>SUPL_PORT=7275</item>
     </string-array>
+
+    <!-- If enabled, capacitive keys will only light up when pressed.
+         Otherwise, the buttons will light up whenever the user interacts with the device -->
+    <bool name="config_buttonLightOnKeypressOnly">true</bool>
+
 </resources>
